# screenscraper

./: .gitignore  .statix.toml  Cargo.toml  README.md  flake.nix
checks/rustfmt/: default.nix
shells/default/: default.nix
src/: api.rs  download.rs  header.rs  jeuinfo.rs  lib.rs  system.rs  userinfo.rs
