[package]
name = "screenscraper"
version = "0.1.0"
edition = "2021"
license = "BSD-4-Clause"
description = "Unofficial ScreenScraper.fr library."
homepage = "https://github.com/gfriloux/screenscraper"
repository = "https://github.com/gfriloux/screenscraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
snafu = "*"
reqwest = { version = "*", features = ["blocking"] }

[dev-dependencies]
dotenv = "0.15.0"
