[package]
name = "screenscraper"
version = "0.2.1"
edition = "2021"
license = "BSD-4-Clause"
description = "Unofficial ScreenScraper.fr library."
homepage = "https://github.com/gfriloux/screenscraper"
repository = "https://github.com/gfriloux/screenscraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
snafu = "0.7.4"
reqwest = { version = "0.11.18", features = ["blocking"] }

[dev-dependencies]
dotenv = "0.15.0"
