[package]
name = "screenscraper"
version = "0.6.0"
edition = "2021"
license = "BSD-4-Clause"
description = "Unofficial ScreenScraper.fr library."
homepage = "https://github.com/gfriloux/screenscraper"
repository = "https://github.com/gfriloux/screenscraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
snafu = "0.7.4"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "rustls-tls"] }
sha1 = "0.10"

[dev-dependencies]
dotenv = "0.15.0"
